메일 포맷 변경